{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 719,
  "lineage": "c0bd225e-a6d1-ca3e-5402-703330cd5aec",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/private-lb/efeef95d808f1fc1",
            "arn_suffix": "app/private-lb/efeef95d808f1fc1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "private-lb-328867266.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/private-lb/efeef95d808f1fc1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0168771f20261f416",
              "sg-08ccb2912538860cf",
              "sg-0c5649b39f4780b0c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03c990fa24d7295f1"
              },
              {
                "subnet_id": "subnet-093f534735e60fd2d"
              },
              {
                "subnet_id": "subnet-0e513f4b49159022d"
              }
            ],
            "subnets": [
              "subnet-03c990fa24d7295f1",
              "subnet-093f534735e60fd2d",
              "subnet-0e513f4b49159022d"
            ],
            "vpc_id": "vpc-0257e270c19adad5a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/public-lb/4e4d57fa3490e4af",
            "arn_suffix": "app/public-lb/4e4d57fa3490e4af",
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-lb-1053380924.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/public-lb/4e4d57fa3490e4af",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0168771f20261f416",
              "sg-08ccb2912538860cf",
              "sg-0c5649b39f4780b0c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0313d05b43dc26082"
              },
              {
                "subnet_id": "subnet-041c73c5a63ae7ae0"
              },
              {
                "subnet_id": "subnet-0f527cbf4241d4912"
              }
            ],
            "subnets": [
              "subnet-0313d05b43dc26082",
              "subnet-041c73c5a63ae7ae0",
              "subnet-0f527cbf4241d4912"
            ],
            "vpc_id": "vpc-0257e270c19adad5a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:listener/app/private-lb/efeef95d808f1fc1/1cbab34205f46ebf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/private-target-group/d67d5cfc1535711e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:listener/app/private-lb/efeef95d808f1fc1/1cbab34205f46ebf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/private-lb/efeef95d808f1fc1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.private",
            "module.load_balancer.aws_lb_target_group.alb_tg_private",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:listener/app/public-lb/4e4d57fa3490e4af/629df3d93d4b1043",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/d9cb10062e612c4a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:listener/app/public-lb/4e4d57fa3490e4af/629df3d93d4b1043",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:loadbalancer/app/public-lb/4e4d57fa3490e4af",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.public",
            "module.load_balancer.aws_lb_target_group.alb_tg_public",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/private-target-group/d67d5cfc1535711e",
            "arn_suffix": "targetgroup/private-target-group/d67d5cfc1535711e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/private-target-group/d67d5cfc1535711e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/d9cb10062e612c4a",
            "arn_suffix": "targetgroup/public-target-group/d9cb10062e612c4a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/d9cb10062e612c4a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "public-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/private-target-group/d67d5cfc1535711e-20240308110217272000000007",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/private-target-group/d67d5cfc1535711e",
            "target_id": "i-09b06d2f17b7c7e96"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.alb_tg_private",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.aws_instance.Auth",
            "module.servers.aws_instance.Heating",
            "module.servers.aws_instance.Lighting",
            "module.servers.aws_instance.Status",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/d9cb10062e612c4a-20240308110217338900000009",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/d9cb10062e612c4a",
            "target_id": "i-0acb96e8fa851b676"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.alb_tg_public",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.aws_instance.Auth",
            "module.servers.aws_instance.Heating",
            "module.servers.aws_instance.Lighting",
            "module.servers.aws_instance.Status",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/d9cb10062e612c4a-20240308110217303300000008",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/d9cb10062e612c4a",
            "target_id": "i-0b87b2215ddfa89a9"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.alb_tg_public",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.aws_instance.Auth",
            "module.servers.aws_instance.Heating",
            "module.servers.aws_instance.Lighting",
            "module.servers.aws_instance.Status",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/d9cb10062e612c4a-20240308110217263100000006",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725568653:targetgroup/public-target-group/d9cb10062e612c4a",
            "target_id": "i-017b699fde5fc9293"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.alb_tg_public",
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.aws_instance.Auth",
            "module.servers.aws_instance.Heating",
            "module.servers.aws_instance.Lighting",
            "module.servers.aws_instance.Status",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:security-group/sg-08ccb2912538860cf",
            "description": "allow HTTP inbound traffic",
            "egress": [],
            "id": "sg-08ccb2912538860cf",
            "ingress": [],
            "name": "allow_HTTP",
            "name_prefix": "",
            "owner_id": "851725568653",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:security-group/sg-0c5649b39f4780b0c",
            "description": "allow HTTPS inbound traffic",
            "egress": [],
            "id": "sg-0c5649b39f4780b0c",
            "ingress": [],
            "name": "allow_HTTPS",
            "name_prefix": "",
            "owner_id": "851725568653",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:security-group/sg-0168771f20261f416",
            "description": "allow SSH inbound traffic from my IP only",
            "egress": [],
            "id": "sg-0168771f20261f416",
            "ingress": [],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "851725568653",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_HTTPS_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-923587421",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c5649b39f4780b0c",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_HTTPS",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_HTTPS_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3412851778",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c5649b39f4780b0c",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_HTTPS",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_HTTP_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4258621554",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08ccb2912538860cf",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_HTTP_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3199709043",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08ccb2912538860cf",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_HTTP_ingress_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-2158650202",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08ccb2912538860cf",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_SSH_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3016981515",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0168771f20261f416",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_SSH_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "31.205.213.69/32",
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2323595030",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0168771f20261f416",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_SSH",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:851725568653:instance/i-09b06d2f17b7c7e96",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b06d2f17b7c7e96",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-nc1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b6f96647e9cbe35c",
            "private_dns": "ip-10-0-1-59.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d197d40d2602a38c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e513f4b49159022d",
            "tags": {
              "name": "Auth_server"
            },
            "tags_all": {
              "name": "Auth_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0168771f20261f416",
              "sg-08ccb2912538860cf",
              "sg-0c5649b39f4780b0c"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:851725568653:instance/i-0acb96e8fa851b676",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0acb96e8fa851b676",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-nc1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00159b52fd0ee1a00",
            "private_dns": "ip-10-0-2-204.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.204",
            "public_dns": "ec2-18-130-26-103.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.26.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041b54205b0680afc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0313d05b43dc26082",
            "tags": {
              "name": "Heating_server"
            },
            "tags_all": {
              "name": "Heating_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0168771f20261f416",
              "sg-08ccb2912538860cf",
              "sg-0c5649b39f4780b0c"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:851725568653:instance/i-0b87b2215ddfa89a9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b87b2215ddfa89a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-nc1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e21cf24abb3398a",
            "private_dns": "ip-10-0-2-52.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.52",
            "public_dns": "ec2-35-178-244-165.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.244.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-030defd46ad545653",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0313d05b43dc26082",
            "tags": {
              "name": "Lighting_server"
            },
            "tags_all": {
              "name": "Lighting_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0168771f20261f416",
              "sg-08ccb2912538860cf",
              "sg-0c5649b39f4780b0c"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:851725568653:instance/i-017b699fde5fc9293",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017b699fde5fc9293",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-nc1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3f67ae1923bff24",
            "private_dns": "ip-10-0-2-75.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.75",
            "public_dns": "ec2-3-8-116-169.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.116.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dcc9ba6f5bfd49e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0313d05b43dc26082",
            "tags": {
              "name": "Status_server"
            },
            "tags_all": {
              "name": "Status_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0168771f20261f416",
              "sg-08ccb2912538860cf",
              "sg-0c5649b39f4780b0c"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_HTTP",
            "module.security.aws_security_group.allow_HTTPS",
            "module.security.aws_security_group.allow_SSH",
            "module.servers.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043b17b601f0e61ef",
            "domain": "vpc",
            "id": "eipalloc-043b17b601f0e61ef",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-11-158-121.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.158.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "natGateway_elasticIP"
            },
            "tags_all": {
              "name": "natGateway_elasticIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:internet-gateway/igw-084c0a149fa4e97c3",
            "id": "igw-084c0a149fa4e97c3",
            "owner_id": "851725568653",
            "tags": {
              "name": "internet_gateway"
            },
            "tags_all": {
              "name": "internet_gateway"
            },
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043b17b601f0e61ef",
            "association_id": "eipassoc-0d7ef169219af4d18",
            "connectivity_type": "public",
            "id": "nat-027557a13a7f5ded6",
            "network_interface_id": "eni-0a2745717e30796bf",
            "private_ip": "10.0.2.96",
            "public_ip": "3.11.158.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0313d05b43dc26082",
            "tags": {
              "name": "Nat_Gateway"
            },
            "tags_all": {
              "name": "Nat_Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:route-table/rtb-02125dd183df2ae0a",
            "id": "rtb-02125dd183df2ae0a",
            "owner_id": "851725568653",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-027557a13a7f5ded6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "private_route_table"
            },
            "tags_all": {
              "name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:route-table/rtb-0c13837f9d9fab736",
            "id": "rtb-0c13837f9d9fab736",
            "owner_id": "851725568653",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084c0a149fa4e97c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public_route_table"
            },
            "tags_all": {
              "name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03356369761b73986",
            "route_table_id": "rtb-02125dd183df2ae0a",
            "subnet_id": "subnet-0e513f4b49159022d"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acfdb465c9808276",
            "route_table_id": "rtb-02125dd183df2ae0a",
            "subnet_id": "subnet-093f534735e60fd2d"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfa09d9856b0c405",
            "route_table_id": "rtb-02125dd183df2ae0a",
            "subnet_id": "subnet-03c990fa24d7295f1"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic_ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3b939674e57282e",
            "route_table_id": "rtb-0c13837f9d9fab736",
            "subnet_id": "subnet-0313d05b43dc26082"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b409395d5d3117f2",
            "route_table_id": "rtb-0c13837f9d9fab736",
            "subnet_id": "subnet-041c73c5a63ae7ae0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0331b1adcefb60368",
            "route_table_id": "rtb-0c13837f9d9fab736",
            "subnet_id": "subnet-0f527cbf4241d4912"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-0e513f4b49159022d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e513f4b49159022d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnets"
            },
            "tags_all": {
              "name": "private_subnets"
            },
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-093f534735e60fd2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093f534735e60fd2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnets"
            },
            "tags_all": {
              "name": "private_subnets"
            },
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-03c990fa24d7295f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c990fa24d7295f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnets"
            },
            "tags_all": {
              "name": "private_subnets"
            },
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-0313d05b43dc26082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0313d05b43dc26082",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnets"
            },
            "tags_all": {
              "name": "public_subnets"
            },
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-041c73c5a63ae7ae0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041c73c5a63ae7ae0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnets"
            },
            "tags_all": {
              "name": "public_subnets"
            },
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:subnet/subnet-0f527cbf4241d4912",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f527cbf4241d4912",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725568653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnets"
            },
            "tags_all": {
              "name": "public_subnets"
            },
            "vpc_id": "vpc-0257e270c19adad5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.shn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725568653:vpc/vpc-0257e270c19adad5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e1daa0aa9bee73ea",
            "default_route_table_id": "rtb-074f084321e3ab23e",
            "default_security_group_id": "sg-0317da59484ccc02f",
            "dhcp_options_id": "dopt-02fd0b363fead2c88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0257e270c19adad5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074f084321e3ab23e",
            "owner_id": "851725568653",
            "tags": {
              "name": "smart_home_network_VPC"
            },
            "tags_all": {
              "name": "smart_home_network_VPC"
            }
          }
        }
      ]
    }
  ]
}